--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
   "dependencies": {
     "express": "^4.17.3",
     "multer": "^1.4.4",
-    "package.json": "^2.0.1",
-    "sqlite": "^4.0.23",
-    "sqlite3": "^5.0.2"
+    "package.json": "^2.0.1"
   }
 }
